<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/baseline_notifications_24"
            android:title="@string/menu_notifications" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/baseline_lock_24"
            android:title="@string/menu_privacy" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/baseline_chat_24"
            android:title="@string/menu_chats" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>

    <item android:title="Communicate">

        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/baseline_share_24"
                android:title="@string/menu_share" />

        </menu>



    </item>
</menu>