<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.cobs.page256app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.cobs.page256app.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.cobs.page256app.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_profile"
        android:name="com.cobs.page256app.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.cobs.page256app.NotificationsFragment"
        android:label="@string/menu_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/nav_chats"
        android:name="com.cobs.page256app.ChatsFragment"
        android:label="@string/menu_chats"
        tools:layout="@layout/fragment_chats" />
    <fragment
        android:id="@+id/nav_share"
        android:name="com.cobs.page256app.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />
    <fragment
        android:id="@+id/contactsFragment"
        android:name="com.cobs.page256app.ContactsFragment"
        android:label="fragment_contacts"
        tools:layout="@layout/fragment_contacts" />
    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.cobs.page256app.SettingsFragment"
        android:label="fragment_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>